# plamp

./: .gitignore  CHECKLIST.md  README.md  app.py  check_plamp.bash  config.json  daily_check.md  install.bash  install_packages.bash  install_plamp_service.bash  install_sysinit.bash  lamp.py  neopix.txt  plamp.html  plamp.init  plamp.py  plamp.service  plamp_socket.py  plampctl  plampstart.bash  pyproject.toml  setup.sh  vimrc  wisdom.json  wpa_supplicant.conf
agent/: README.md  check_alive.bash  check_alive_last_seen.txt  check_alive_state.json  check_daily.md  check_weekly.md  last_seen_alive.txt
data/: config.json
docs/: host-tools.md  openapi.json  spec-current.md  suggestions.md
grow/: OPERATING_MODEL.md  README.md  capture_photo.py  compare_light.py  hourly_tend.py  log_event.py
pico_api/: README.md  server.py
pico_doser/: __init__.py  generator.py
pico_scheduler/: README.md  generator.py  main.py  state.json.example
plamp/: __init__.py  __main__.py  cad_cli.py  cad_generation.py  cad_metadata.py  cad_recipes.py  cad_scaffold.py  camera.py  cli.py  config.py  context.py  hardware_config.py  locks.py  pico_commands.py  pico_discovery.py  pico_firmware.py  pico_health.py  pico_protocol.py  pico_scheduler.py  pico_transport.py  scheduler_state.py  usb_events.py
plamp_cli/: README.md  __main__.py  http.py  io.py  main.py
plamp_web/: README.md  camera_capture.py  grow_diagnostics.py  hardware_config.py  hardware_inventory.py  pages.py  server.py  timer_schedule.py
plampjs/: plamp.js
public/: index.html  tilt.html  touch.html
scripts/: plamp_cam  (+3 more)
(+245 files in other folders)
