[project]
name = "plamp"
version = "0.1.0"
description = "Host tools and firmware for plamp."
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "pyserial",
  "pyudev",
  "uvicorn[standard]",
]

[project.scripts]
plamp = "plamp_cli.main:run"

[tool.setuptools.packages.find]
include = ["plamp*"]
