[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "plamp"
dynamic = ["version"]
description = "Host tools and firmware for plamp."
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "pyserial",
  "pyudev",
  "uvicorn[standard]",
]

[project.scripts]
plamp = "plamp_cli.main:run"

[tool.setuptools.packages.find]
include = ["plamp*"]
